--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@milkdown/utils": "^7.13.1",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.9.1",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
