--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,8 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
-    "@milkdown/crepe": "^7.13.1",
-    "@milkdown/plugin-listener": "^7.13.1",
+    "@milkdown/kit": "^7.13.1",
     "@milkdown/react": "^7.13.1",
-    "@milkdown/utils": "^7.13.1",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^11.9.1",
     "lucide-react": "^0.515.0",
